# FuzzJudge

./: .gitignore  .graphqlrc.yml  .prettierignore  .prettierrc  Dockerfile  Dockerfile.frontend  Dockerfile.server  README.md  SPEC-DRAFT.md  biome.json  bun.lockb  docker-compose.yaml  lefthook.yml  package.json  renovate.json  tsconfig.base.json  tsconfig.json  tsconfig.tsbuildinfo
.changeset/: angry-ravens-bet.md  beige-sheep-fry.md  bright-apes-train.md  bumpy-falcons-look.md  chubby-hats-feel.md  chubby-news-hear.md  cold-buttons-obey.md  config.json  cyan-hands-work.md  deep-loops-jog.md  dry-seals-eat.md  early-bears-thank.md  early-crabs-camp.md  easy-drinks-strive.md  easy-fans-love.md  easy-plums-lead.md  easy-tigers-watch.md  eleven-foxes-sleep.md  famous-eyes-lick.md  fancy-bikes-thank.md  fifty-cars-do.md  fifty-pandas-grab.md  fine-ghosts-do.md  fluffy-snails-trade.md  fresh-fans-push.md  gentle-comics-carry.md  gold-taxis-rush.md  hip-donkeys-wait.md  hot-melons-rule.md  huge-groups-learn.md  huge-pens-search.md  lemon-pillows-hope.md  little-peas-eat.md  long-laws-create.md  long-mammals-post.md  lucky-plants-post.md  mean-glasses-roll.md  metal-hairs-type.md  modern-cobras-return.md  moody-goats-trade.md  (+36 more)
clients/fj-tui/: .gitignore  Cargo.toml  README.md
clients/fj-tui/src/: api.rs  auth.rs  clock.rs  console.rs  event.rs  key.rs  main.rs  md.rs  problem.rs  scroll.rs  shell.rs  state.rs  ui.rs  utils.rs
clients/fj-tui/src/queries/: ClockSubscription.gql  CurrentUserQuery.gql  FuzzMutation.gql  JudgeProblemMutation.gql  Login.gql  ProblemQuery.gql  ProblemsQuery.gql
docs/: MANUAL.md
patches/: svelte-markdown@0.4.1.patch
sample/: comp.md
server/: .env  .env.test  .gitignore  :memory:  CHANGELOG.md  Dockerfile  README.md  build.ts  codegen.ts  deps.ts  dev.ts  drizzle.config.ts  knip.json  main.ts  mod.ts  package.json  tsconfig.json  tsdown.config.ts
src/: admin.html  auth.ts  clock.ts  comp.ts  (+7 more)
(+476 files in other folders)
