[package]
name = "fj-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "^0.27.0"
tokio-macros = "2.3.0"
tokio = { version = "^1.38.0", features = ["full"] }
base64 = "0.22.1"
reqwest = "0.12.5"
markdown = "1.0.0-alpha.17"
clap = { version = "4.5.7", features = ["derive"] }
clap_derive = "4.5.5"
