[package]
name = "fj-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "=0.27.0"
tokio-macros = "=2.3.0"
tokio = { version = "=1.38.0", features = ["full"] }
base64 = "=0.22.1"
reqwest = "=0.12.5"
markdown = "=1.0.0-alpha.17"
clap = { version = "=4.5.7", features = ["derive"] }
clap_derive = "=4.5.5"
tokio-tungstenite = "=0.23.1"
futures-util = { version = "=0.3.31", default-features = false, features = ["sink", "std"] }
futures-channel = "=0.3.31"
serde = "=1.0.203"
serde_json = "=1.0.118"
chrono = "=0.4.38"
url = "=2.5.2"
async-recursion = "=1.1.1"

